--- a/_artifacts/document-attributes.adoc
+++ b/_artifacts/document-attributes.adoc
@@ -1,6 +1,6 @@
 
 
-:REBUILT: Wednesday, May 31, 2023
+:REBUILT: Monday, September 25th, 2023
 
 :ENTERPRISE_VERSION: 8.0
 :ENTERPRISE_VERSION_LONG: 8.0.3
