BXMSDOC-8685-7.67.x-blue recreated 804 release notes

--- a/assemblies/assembly-release-notes.adoc
+++ b/assemblies/assembly-release-notes.adoc
@@ -34,5 +34,7 @@ include::{enterprise-dir}/release-notes/rn-BAMOE-8.0.3-known-issues-ref.adoc[lev
 
 include::{enterprise-dir}/release-notes/rn-BAMOE-8.0.3-fixed-issues-ref.adoc[leveloffset=+1]
 
+include::{enterprise-dir}/release-notes/rn-BAMOE-8.0.4-fixed-issues-ref.adoc[leveloffset=+1]
+
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
