--- a/assemblies/assembly-release-notes.adoc
+++ b/assemblies/assembly-release-notes.adoc
@@ -34,6 +34,8 @@ include::{enterprise-dir}/release-notes/rn-BAMOE-8.0.3-known-issues-ref.adoc[lev
 
 include::{enterprise-dir}/release-notes/rn-BAMOE-8.0.3-fixed-issues-ref.adoc[leveloffset=+1]
 
+include::{enterprise-dir}/release-notes/rn-BAMOE-8.0.4-known-issues-ref.adoc[leveloffset=+1]
+
 include::{enterprise-dir}/release-notes/rn-BAMOE-8.0.4-fixed-issues-ref.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
