--- a/assemblies/assembly-release-notes.adoc
+++ b/assemblies/assembly-release-notes.adoc
@@ -46,5 +46,7 @@ include::{enterprise-dir}/release-notes/rn-7.13.4-known-issues-ref.adoc[leveloff
 
 include::{enterprise-dir}/release-notes/rn-7.13.4-fixed-issues-ref.adoc[leveloffset=+1]
 
+include::{enterprise-dir}/release-notes/rn-7.13.5-fixed-issues-ref.adoc[leveloffset=+1]
+
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
