BXMSDOC-8692 changed date

--- a/doc-content/enterprise-only/release-notes/rn-7.13.4-known-issues-ref.adoc
+++ b/doc-content/enterprise-only/release-notes/rn-7.13.4-known-issues-ref.adoc
@@ -1,7 +1,7 @@
 [id='rn-7.13.4-known-issues-ref']
-= Known limitations in {PRODUCT} 7.13.4
+= Known issues in {PRODUCT} 7.13.4
 
-This section lists known limitations with {PRODUCT} 7.13.4.
+This section lists known issues with {PRODUCT} 7.13.4.
 
 == {CENTRAL}
 
