--- a/doc-content/enterprise-only/release-notes/rn-BAMOE-8.0.5-fixed-issues-ref.adoc
+++ b/doc-content/enterprise-only/release-notes/rn-BAMOE-8.0.5-fixed-issues-ref.adoc
@@ -10,9 +10,12 @@
 
 * Duplicate signals received [https://issues.redhat.com/browse/RHPAM-4813[RHPAM-4813]]
 
+* After a process instance is aborted (async), the current node remains in RED [https://issues.redhat.com/browse/RHPAM-4803[RHPAM-4803]]
+
+* business-central shows all process instances in multi-tenancy setup [https://issues.redhat.com/browse/RHPAM-4889[RHPAM-4889]]
 
 
-ifdef::PAM[]
+
 
 == {PROCESS_ENGINE_CAP}
 * Deadlock is happening on SessionInfo and ProcessInstanceInfo tables [https://issues.redhat.com/browse/RHPAM-4759[RHPAM-4759]]
@@ -23,7 +26,29 @@ ifdef::PAM[]
 
 * Duplicate timer created for Task SLA Due date with AsyncMode env setting [https://issues.redhat.com/browse/RHPAM-4836[RHPAM-4836]]
 
-endif::[]
+* Update timer does not delete the correct old timer [https://issues.redhat.com/browse/RHPAM-4877[RHPAM-4877]]
+
+* LogCleanupCommand does not keep scheduled time with pagination [https://issues.redhat.com/browse/RHPAM-4872[RHPAM-4872]]
+
+* Duplicate timer execution with long running timers and async nodes [https://issues.redhat.com/browse/RHPAM-4864[RHPAM-4864]]
+
+* Timer scheduler should use CMT to keep the same transaction [https://issues.redhat.com/browse/RHPAM-4845[RHPAM-4845]]
+
+* Dynamic boundary signal won't be triggered without providing process instance ID [https://issues.redhat.com/browse/RHPAM-4768[RHPAM-4768]]
+
+* Before and after TaskAssignmentsAddedEvent show same user details in both events [https://issues.redhat.com/browse/RHPAM-4442[RHPAM-4442]]
+
+* beforeTaskCompletedEvent shows updated value of process variables [https://issues.redhat.com/browse/RHPAM-4446[RHPAM-4446]]
+
+* Pooling in KafkaServerConsumer not working as expected [https://issues.redhat.com/browse/RHPAM-4898[RHPAM-4898]]
+
+* Date handling has been changed between RHPAM 7.13.3 and 7.13.4 [https://issues.redhat.com/browse/RHPAM-4908[RHPAM-4908]]
+
+* LogCleanupCommand removes executor logs for active process instances [https://issues.redhat.com/browse/RHPAM-4918[RHPAM-4918]]
+
+* Track user aborting a process instance [https://issues.redhat.com/browse/RHPAM-4919[RHPAM-4919]]
+
+* No session found errors when sending kafka messages with correlations in bulk [https://issues.redhat.com/browse/RHPAM-4924[RHPAM-4924]]
 
 == {KIE_SERVER}
 * Backport DROOLS-7014 to Red Hat Decision Manager libraries [https://issues.redhat.com/browse/RHDM-2006[RHDM-2006]]
@@ -31,6 +56,8 @@ endif::[]
 * An immutable KIE container is not deployed with auto scan in SpringBoot kie-server after upgrading to 7.13.1 [https://issues.redhat.com/browse/RHPAM-4800[RHPAM-4800]]
 
 * Exclusion on kie-server affects custom endpoints [https://issues.redhat.com/browse/RHPAM-4876[RHPAM-4876]]
+
+* Kafka Auth feature with message record headers [https://issues.redhat.com/browse/RHPAM-4927[RHPAM-4927]]
 
 == Decision engine
 * Coercion from interger literal to BigDecimal bind variable [https://issues.redhat.com/browse/RHDM-1991[RHDM-1991]]
@@ -46,3 +73,10 @@ endif::[]
 * EXISTS and NOT do not work correctly with multiple constraints with BigDecimal [https://issues.redhat.com/browse/RHDM-2016[RHDM-2016]]
 
 * Drools executable-model fails with a bind variable to a calculation result of int and BigDecimal [https://issues.redhat.com/browse/RHDM-2020[RHDM-2020]]
+
+* Big Decimal data type conversion issue [https://issues.redhat.com/browse/RHPAM-4926[RHPAM-4926]]
+
+
+== {OPENSHIFT}
+
+* EJB_TIMER Ds Auto creation does not recognizes Url XA property [https://issues.redhat.com/browse/RHPAM-4710[RHPAM-4710]]
